# sfnd-lidar-obstacle-detection

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: environment.cpp  euclidean_clustering.h  kdtree.h  processPointClouds.cpp  processPointClouds.h
src/render/: render.h
tests/: kdtree_clustering_test.cpp  pipeline_test.cpp
